[gd_scene load_steps=13 format=3 uid="uid://be1vghlvo47na"]

[ext_resource type="Texture2D" uid="uid://dqrrhue03clth" path="res://icon.svg" id="1_4rq6x"]
[ext_resource type="Script" path="res://gamelogic/RoomSelector/room_icon.gd" id="1_gynwe"]
[ext_resource type="Texture2D" uid="uid://d0xf7x2c1mt7y" path="res://assets/others/Cross.png" id="3_1yrxx"]
[ext_resource type="Texture2D" uid="uid://csgm66veenlco" path="res://assets/others/BossText.png" id="3_sy23j"]
[ext_resource type="Texture2D" uid="uid://dbsw3bpkg3rap" path="res://assets/others/Circle.png" id="4_8jvdi"]
[ext_resource type="Texture2D" uid="uid://ctcg8capeh82w" path="res://assets/others/Elite.png" id="5_xu3en"]
[ext_resource type="Texture2D" uid="uid://b5641wsvxatgq" path="res://assets/others/Event.png" id="6_3pmjm"]
[ext_resource type="Texture2D" uid="uid://b03vohylukxp4" path="res://assets/others/House.png" id="7_fidvi"]
[ext_resource type="Texture2D" uid="uid://bcov5r1s3qg6f" path="res://assets/others/Monster.png" id="8_y5mkb"]
[ext_resource type="Texture2D" uid="uid://blr1to3meb46e" path="res://assets/others/Rest.png" id="9_8d7se"]
[ext_resource type="Texture2D" uid="uid://brtppjcwd3yc" path="res://assets/others/Shop.png" id="10_4neky"]
[ext_resource type="Texture2D" uid="uid://bq3kalrbd7a3i" path="res://assets/others/Treasure.png" id="11_1onns"]

[node name="Room_Icon" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_gynwe")

[node name="Icon" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_4rq6x")
metadata/_edit_lock_ = true

[node name="Cross" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_1yrxx")

[node name="Circle" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_8jvdi")

[node name="BossText" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_sy23j")

[node name="Elite" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("5_xu3en")

[node name="Event" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.15, 0.15)
texture = ExtResource("6_3pmjm")

[node name="House" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.15, 0.15)
texture = ExtResource("7_fidvi")

[node name="Monster" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.15, 0.15)
texture = ExtResource("8_y5mkb")

[node name="Rest" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.15, 0.15)
texture = ExtResource("9_8d7se")

[node name="Shop" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.15, 0.15)
texture = ExtResource("10_4neky")

[node name="Treasure" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.15, 0.15)
texture = ExtResource("11_1onns")

[node name="Button" type="Button" parent="."]
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
